[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Inicio.gd" type="Script" id=1]
[ext_resource path="res://audio/mouse.ogg" type="AudioStream" id=3]
[ext_resource path="res://audio/errado.ogg" type="AudioStream" id=4]
[ext_resource path="res://imagens/Botões Game Of Privacy (1)/2.png" type="Texture" id=5]
[ext_resource path="res://imagens/Botões Game Of Privacy (1)/3.png" type="Texture" id=6]
[ext_resource path="res://imagens/Botões Game Of Privacy (1)/1.png" type="Texture" id=7]
[ext_resource path="res://imagens/Botões Game Of Privacy (1)/teladojogo.png" type="Texture" id=8]
[ext_resource path="res://imagens/Botões Game Of Privacy (1)/teste.png" type="Texture" id=9]

[node name="Inicio" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Teladojogo" type="Sprite" parent="."]
visible = false
position = Vector2( 680.5, 382.5 )
scale = Vector2( 0.713021, 0.710185 )
texture = ExtResource( 8 )

[node name="Teste" type="Sprite" parent="."]
position = Vector2( 686.5, 291 )
scale = Vector2( 0.716146, 0.885185 )
texture = ExtResource( 9 )

[node name="clique" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="gop" type="Button" parent="."]
margin_left = 116.0
margin_top = 420.0
margin_right = 442.0
margin_bottom = 745.0
flat = true
__meta__ = {
"_edit_group_": true
}

[node name="gopi" type="TextureRect" parent="gop"]
margin_left = -16.0
margin_top = -11.0
margin_right = 484.0
margin_bottom = 489.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 7 )

[node name="dica" type="Button" parent="."]
margin_left = 551.0
margin_top = 460.0
margin_right = 832.0
margin_bottom = 717.0
flat = true

[node name="dic" type="TextureRect" parent="dica"]
margin_left = -35.0
margin_top = -61.0
margin_right = 465.0
margin_bottom = 439.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 5 )

[node name="desafio" type="Button" parent="."]
margin_left = 989.0
margin_top = 334.0
margin_right = 1301.0
margin_bottom = 642.0
flat = true

[node name="desa" type="TextureRect" parent="desafio"]
margin_left = -14.0
margin_top = 67.0
margin_right = 486.0
margin_bottom = 567.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 6 )

[node name="maximo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="tween" type="Tween" parent="."]

[node name="gameover" type="Button" parent="."]
margin_left = 2.0
margin_top = 3.0
margin_right = 79.0
margin_bottom = 72.0
flat = true

[node name="campeao" type="Button" parent="."]
margin_left = 1298.0
margin_top = 2.0
margin_right = 1367.0
margin_bottom = 61.0
flat = true

[connection signal="pressed" from="gop" to="." method="_on_gop_pressed"]
[connection signal="mouse_entered" from="gop/gopi" to="." method="_on_gopi_mouse_entered"]
[connection signal="mouse_exited" from="gop/gopi" to="." method="_on_gopi_mouse_exited"]
[connection signal="pressed" from="dica" to="." method="_on_dica_pressed"]
[connection signal="mouse_entered" from="dica/dic" to="." method="_on_dic_mouse_entered"]
[connection signal="mouse_exited" from="dica/dic" to="." method="_on_dic_mouse_exited"]
[connection signal="pressed" from="desafio" to="." method="_on_desafio_pressed"]
[connection signal="mouse_entered" from="desafio/desa" to="." method="_on_desa_mouse_entered"]
[connection signal="mouse_exited" from="desafio/desa" to="." method="_on_desa_mouse_exited"]
[connection signal="pressed" from="gameover" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="gameover" to="." method="_on_gameover_pressed"]
[connection signal="pressed" from="campeao" to="." method="_on_campeao_pressed"]
